d-feet (0.3.10-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Drop patches which have been applied upstream:
    - debian/patches/01-add-missing-appdata-in-file.patch
    - debian/patches/02-make-pep8-happy.patch

 -- Michael Biebl <biebl@debian.org>  Wed, 07 Oct 2015 19:50:21 +0200

d-feet (0.3.9-2) unstable; urgency=medium

  * Team upload
  * Make PEP8 happy, again. Patch from upstream git. (Closes: #797398)
  * Cadebian/patches/02-make-pep8-happy.patchnonicalize Vcs-Git
  * Use https and cgit for Vcs-Browser
  * Standards-Version: 3.9.6 (no changes)
  * Add dh-python to Build-Depends

 -- Simon McVittie <smcv@debian.org>  Tue, 29 Sep 2015 11:30:40 +0100

d-feet (0.3.9-1) unstable; urgency=medium

  * New upstream release.
  * Add d-feet.appdata.xml.in which is missing in the upstream tarball. This
    file is required during autoreconf.
  * Make PEP8 happy. Patch taken from upstream bug tracker. (Closes: #759223)
  * Update Homepage: URL. (Closes: #745752)
  * Bump Standards-Version to 3.9.5. No further changes.

 -- Michael Biebl <biebl@debian.org>  Fri, 12 Sep 2014 17:37:27 +0200

d-feet (0.3.8-1) unstable; urgency=medium

  * New upstream release.
  * debian/control:
    - Use debian address in Uploaders field.
    - Build-Depends on libgtk-3-dev (>= 3.9.4) according to configure.ac.
  * debian/patches:
    - 02-no-gettext.patch: Removed. Applied upstream.
    - 03-disable-dbus-tests.patch: Refreshed.

 -- Thomas Bechtold <toabctl@debian.org>  Fri, 07 Mar 2014 17:39:04 +0100

d-feet (0.3.6-1) unstable; urgency=low

  * New upstream release.

 -- Thomas Bechtold <thomasbechtold@jpberlin.de>  Wed, 10 Jul 2013 11:45:08 +0200

d-feet (0.3.5-1) unstable; urgency=low

  * New upstream release.
  * Refresh debian/patches/03-disable-dbus-tests.patch.
  * debian/control: Add gobject-introspection and libgirepository1.0-dev
    to Build-Depends according to configure.ac.

 -- Thomas Bechtold <thomasbechtold@jpberlin.de>  Mon, 10 Jun 2013 10:29:44 +0200
