@@ -1,3 +1,4 @@
 [DEFAULT]
 pristine-tar = True
+patch-numbers = False
 debian-branch = master
